Refactor into inner class CloneVisitor